--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 remote_theme: pages-themes/minimal@v0.2.0
 title: [Ubuntu Vanilla Builder]
-description: []
+description: [Build your own Ubuntu Vanilla with more customization and more lighter than OG's Ubuntu]
+
